--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@heroicons/vue": "^1.0.4",
+    "change-case": "^4.1.2",
     "vue": "^3.0.5"
   },
   "devDependencies": {
