--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.4",
-    "vue": "^3.0.5"
+    "change-case": "^4.1.2",
+    "vue": "^3.0.5",
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
