--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@heroicons/vue": "^1.0.4",
     "change-case": "^4.1.2",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.11"
+    "vue-router": "^4.0.11",
+    "vue-window-size": "^1.1.2"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
