--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "@heroicons/vue": "^1.0.4",
     "change-case": "^4.1.2",
+    "click-outside-vue3": "^4.0.1",
+    "prismjs": "^1.24.1",
     "vue": "^3.0.5",
+    "vue-prism-editor": "^2.0.0-alpha.2",
     "vue-router": "^4.0.11",
-    "vue-window-size": "^1.1.2"
+    "vue-window-size": "^1.1.2",
+    "vue3-click-away": "^1.2.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
