--- a/package.json
+++ b/package.json
@@ -13,11 +13,10 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.4",
+    "@highlightjs/vue-plugin": "^2.0.1",
     "change-case": "^4.1.2",
-    "click-outside-vue3": "^4.0.1",
-    "prismjs": "^1.24.1",
+    "highlight.js": "^11.2.0",
     "vue": "^3.0.5",
-    "vue-prism-editor": "^2.0.0-alpha.2",
     "vue-router": "^4.0.11",
     "vue-window-size": "^1.1.2",
     "vue3-click-away": "^1.2.1",
