--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "prepare": "husky install",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore --fix src",
+    "format": "prettier .  --write"
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.4",
     "@highlightjs/vue-plugin": "^2.0.1",
+    "@vueuse/core": "^6.0.0",
     "change-case": "^4.1.2",
     "highlight.js": "^11.2.0",
     "vue": "^3.0.5",
-    "vue-router": "^4.0.11",
-    "vue-window-size": "^1.1.2",
-    "vue3-click-away": "^1.2.1",
-    "vue3-clipboard": "^1.0.0"
+    "vue-router": "^4.0.11"
   },
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
