--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@heroicons/vue": "^1.0.4",
     "@highlightjs/vue-plugin": "^2.0.1",
+    "@iconify/iconify": "^2.0.4",
     "@vueuse/core": "^6.0.0",
-    "change-case": "^4.1.2",
     "highlight.js": "^11.2.0",
     "vue": "^3.0.5",
     "vue-router": "^4.0.11"
@@ -23,14 +22,17 @@
   "devDependencies": {
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@iconify/json": "^1.1.402",
     "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.0.5",
+    "@vue/compiler-sfc": "^3.2.11",
     "autoprefixer": "^10.3.1",
     "husky": "^7.0.1",
     "postcss": "^8.3.6",
     "rollup-plugin-visualizer": "^5.5.2",
     "tailwindcss": "^2.2.7",
+    "unplugin-icons": "^0.11.1",
+    "unplugin-vue-components": "^0.15.1",
     "vite": "^2.4.4",
-    "vite-plugin-components": "^0.13.2"
+    "vite-plugin-purge-icons": "^0.7.0"
   }
 }
